--- a/My favourite club/CHELSEA FC/index.html
+++ b/My favourite club/CHELSEA FC/index.html
@@ -33,12 +33,12 @@
         <nav>
             <img class="logo-team" src="images.png">
             <ul class="lists-header">
-                <li><a href="#"></a>LATEST</li>
-                <li><a href="#"></a>WATCH</li>
-                <li><a href="#"></a>Men'S TEAM</li>
-                <li><a href="#"></a>WOMEN'S TEAM</li>
-                <li><a href="#"></a>TICKETS & HOSPITALITY</li>
-                <li><a href="#"></a>SHOP</li>
+                <li><a href="#">LATEST</a></li>
+                <li><a href="#">WATCH</a></li>
+                <li><a href="#">Men'S TEAM</a></li>
+                <li><a href="#">WOMEN'S TEAM</a></li>
+                <li><a href="#">TICKETS & HOSPITALITY</a></li>
+                <li><a href="#">SHOP</a></li>
                     <a href="#"><i class="fas fa-search"></i></a>
                     <span class="separator"></span>
                     <a class="targets-menu" href="#"><i class="fas fa-bars"></i></a>
@@ -59,6 +59,16 @@
                 <p>AGG</p>
                 <h6>4-1</h6>
                 <a class="match-predicted" href="#">Match Centre <span class="separator"></span><i class="fas fa-arrow-right"></i></a>
+            </div>
+        </div>
+        <div class="sponsors-carousel">
+            <div class="sponsors">
+                <img src="nike-swoosh-logo.jpeg" alt="Company 1">
+                <img src="infinite-athlete.jpg" alt="Company 2">
+                <img src="17MYMJsd.jpg" alt="Company 4">
+                <img src="1b3c650bec7971a6ed9fec153c79ff4c.png" alt="Company 5">
+                <img src="images (1).png" alt="Company 6">
+                <img src="3-three.png" alt="Company 7">
             </div>
         </div>
     </main>
