--- a/My favourite club/CHELSEA FC/index.html
+++ b/My favourite club/CHELSEA FC/index.html
@@ -33,11 +33,57 @@
         <nav>
             <img class="logo-team" src="images.png">
             <ul class="lists-header">
-                <li><a href="#">LATEST</a></li>
-                <li><a href="#">WATCH</a></li>
-                <li><a href="#">Men'S TEAM</a></li>
-                <li><a href="#">WOMEN'S TEAM</a></li>
-                <li><a href="#">TICKETS & HOSPITALITY</a></li>
+                <ul class="menu">
+                    <li><a href="#">LATEST</a>
+                        <ul class="submenu">
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Interviews & Features</a></li>
+                            <li><a href="#">USA TOUR 2024</a></li>
+                            <img src="USA_Tour_Announcement_Two_Article_Body_2880x1620_V1.webp" alt="tour">
+                        </ul>
+                    </li>
+                    <li><a href="#">WATCH</a>
+                        <ul class="submenu">
+                            <li><a href="#">Discover</a></li>
+                            <li><a href="#">Highlights & Full Matches</a></li>
+                            <li><a href="#">Boxsets</a></li>
+                            <img src="b9e5b9ce-2b3c-440a-8fa2-b1223fb6f2c8_cx0_cy11_cw98_w1200_r1 (1).avif" alt="champions">
+                        </ul>
+                    </li>
+                    <li><a href="#">Men'S TEAM</a>
+                        <ul class="submenu">
+                            <li><a href="#">Fixtures & Results</a></li>
+                            <li><a href="#">Players & Staff</a></li>
+                            <li><a href="#">League Tables</a></li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Academy</a></li>
+                            <li><a href="#">Next Match</a></li>
+                            <img src="0_Manchester-United-vs-Chelsea.jpg" alt="match">
+                        </ul>
+                    </li>
+                    <li><a href="#">WOMEN'S TEAM</a>
+                        <ul class="submenu">
+                            <li><a href="#">Fixtures & Results</a></li>
+                            <li><a href="#">Players & Staff</a></li>
+                            <li><a href="#">League Tables</a></li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Academy</a></li>
+                            <li><a href="#">Next Match</a></li>
+                            <img src="0_Manchester-United-vs-Chelsea.jpg" alt="match">
+                        </ul>
+                    </li>
+                    <li><a href="#">TICKETS & HOSPITALITY</a>
+                        <ul class="submenu">
+                            <li><a href="#">Buy Tickets</a></li>
+                            <li><a href="#">Stadium Tours & Museum</a></li>
+                            <li><a href="#">Memberships</a></li>
+                            <li><a href="#">Season Tickets</a></li>
+                            <li><a href="#">Ticket Information</a></li>
+                            <li><a href="#">My Tickets Account</a></li>
+                            <li><a href="#">All Our Ticket Types</a></li>
+                        </ul>
+                    </li>
+                </ul>
                 <li><a href="#">SHOP</a></li>
                     <a href="#"><i class="fas fa-search"></i></a>
                     <span class="separator"></span>
