--- a/My favourite club/CHELSEA FC/index.html
+++ b/My favourite club/CHELSEA FC/index.html
@@ -134,6 +134,24 @@
             </div>
         </div>
     </main>
+    <section>
+        <article class="card">
+            <div class="zoom">
+                <img src="sterling.webp" class="cards">
+                <div class="overlay">
+                    <h1>Man</h1>
+                </div>
+            </div>
+        </article>
+        <article class="card">
+            <div class="zoom">
+                <img src="Lauren_James_WSL_POTM_Jan_2024.webp" class="cards">
+                <div class="overlay">
+                    <h1>Women</h1>
+                </div>
+            </div>
+        </article>
+    </section>
 
     <button onclick="scrollTOTop()" id="scrollBtn" title="comeback">&#8593;</button>
     <script>
